Apply -proc:full in SourceCompilationUnit.compile
Reverts the change from 4cb45bb5118ef3ff50ed96fdc640718297b8bb85.
This caused almost all the CI builds to fail, since the current JDK is
11.0.6+10-LTS, and `-proc:full` isn't backported until 11.0.23.

- https://inside.java/2024/06/18/quality-heads-up/

`SourceCompilationUnit.compile` uses `JavaCompiler.isSupportedOption`
to determine whether or not to add this option:

- https://docs.oracle.com/en/java/javase/11/docs/api/java.compiler/javax/tools/JavaCompiler.html